--- a/Informe Final/Capitulos/Capitulo4/CasosUso/GestionLineasOrdenesProduccion/verificarLineaOrdenProduccion.tex
+++ b/Informe Final/Capitulos/Capitulo4/CasosUso/GestionLineasOrdenesProduccion/verificarLineaOrdenProduccion.tex
@@ -15,10 +15,10 @@
 }
 \renewcommand{\caseUseScene}{ %Escenario principal
     \addCaseUseStep{El administrador indica la línea de orden de producción que desea verificar que esta finalizada.}
-    \addCaseUseStep{ZMGestion pasa la línea de orden de producción al estado `Verificada' y muestra un mensaje indicando el éxito de la operación.}
+    \addCaseUseStep{ZMGestion pasa la línea de orden de producción al estado `Reservada' en caso de tener una venta asociada, caso contrario al estado de `Verificada'. ZMGestion muestra un mensaje indicando el éxito de la operación.}
 }
 \renewcommand{\alternativeCaseUse}{ %Flujos alternativos
-	\newAlternative{A1: La línea de orden de producción no se encuentra en estado `En producción' y sus tareas no están todas finalizadas.}{1} %Flujo alternativoA1.
+	\newAlternative{A1: La línea de orden de producción no se encuentra en estado `En producción' o sus tareas no están todas finalizadas.}{1} %Flujo alternativoA1.
 	\caseUseRow{La secuencia A1 comienza luego del punto 1 del escenario principal.} %¡Indicar número paso!
     \alternativeRow{ZMGestion muestra un mensaje de error indicando que la línea de orden de producción no puede ser verificada.}
     \caseUseRow{El escenario vuelve al punto 1.}    
