--- a/Informe Final/Capitulos/Capitulo4/cap4sec1.tex
+++ b/Informe Final/Capitulos/Capitulo4/cap4sec1.tex
@@ -592,6 +592,18 @@
 	\stateDiagram{ventas}{Diagrama de transición de estados - Ventas}
 	\stateDiagram{ordenesProduccion}{Diagrama de transición de estados - Órdenes de producción}
 	\stateDiagram{remitos}{Diagrama de transición de estados - Remitos}
+
+	\clearpage %salto de pagina
+	\subsection{Diagramas de interacción}
+	Solo se especificarán los diagramas de interacción más relevantes del sistema.
+
+%	\begin{figure}[H]
+%		\centering
+%		\includegraphics[width=\textwidth,height=0.9\textheight,keepaspectratio]{DiagramasSecuencia/GestionUsuarios}
+%		\caption{Diagrama de interacción - Gestión de usuarios}
+%	\label{fig:Diagrama de interacción - Gestión de usuarios}
+%	\end{figure}
+	
 	
 		
 	
