--- a/Informe Final/Capitulos/Capitulo4/CasosUso/GestionUbicaciones/crearUbicacion.tex
+++ b/Informe Final/Capitulos/Capitulo4/CasosUso/GestionUbicaciones/crearUbicacion.tex
@@ -20,7 +20,7 @@
     \addCaseUseStep{ZMGestion crea la ubicación y muestra un mensaje indicando el éxito de la operación.}
 }
 \renewcommand{\alternativeCaseUse}{ %Flujos alternativos
-	\newAlternative{A1: El administrador ha dejado un campo obligatorio vacio.}{3} %Flujo alternativo A1.
+	\newAlternative{A1: El administrador ha dejado un campo obligatorio vacío.}{3} %Flujo alternativo A1.
 	\caseUseRow{La secuencia A1 comienza luego del punto 3 del escenario principal.} %¡Indicar número paso!
     \alternativeRow{ZMGestion muestra un mensaje de error indicando que dicho campo es requerido.}
     \caseUseRow{El escenario vuelve al punto 2.}
