--- a/Informe Final/Capitulos/Capitulo4/CasosUso/GestionLineasRemito/crearLineaRemito.tex
+++ b/Informe Final/Capitulos/Capitulo4/CasosUso/GestionLineasRemito/crearLineaRemito.tex
@@ -14,8 +14,8 @@
 }
 \renewcommand{\caseUseScene}{ %Escenario principal
     \addCaseUseStep{El vendedor desea agregar una linea de remito a un determinado remito.}
-    \addCaseUseStep{ZMGestion muestra un formulario para que el vendedor seleccione un producto, tela, lustre e indique la cantidad del mismo. Indicando que el producto y la cantidad son obligatorios.}
-    \addCaseUseStep{El vendedor selecciona producto, tela, lustre y la cantidad que desea producir.}
+    \addCaseUseStep{ZMGestion muestra un formulario para que el vendedor seleccione un producto, tela, lustre, indique la cantidad del mismo y la ubicación (de entrada o salida según corresponda). Indicando que el producto y la cantidad son obligatorios.}
+    \addCaseUseStep{El vendedor selecciona producto, tela, lustre, la cantidad que desea producir y la ubicación.}
     \addCaseUseStep{ZMGestion crea la linea de remito en estado `Pendiente de entrega' y la asocia al remito correspondiente.}
 }
 \renewcommand{\alternativeCaseUse}{ %Flujos alternativos
@@ -24,7 +24,7 @@
     \alternativeRow{ZMGestion muestra un mensaje de error indicando que debe ingresar una cantidad mayor a cero.}
     \caseUseRow{El escenario vuelve al punto 2.}
     \caseUseRow{}
-    \newAlternative{A2: El producto, tela y lustre indicado ya se encuentra en el remito.}{3} %Flujo alternativo A2.
+    \newAlternative{A2: El producto, tela, lustre y ubicación indicado ya se encuentra en el remito.}{3} %Flujo alternativo A2.
     \caseUseRow{La secuencia A2 comienza luego del punto 3 del escenario principal.} %¡Indicar número paso!
     \alternativeRow{ZMGestion muestra un mensaje de error indicando que la combinación de producto, tela y lustre ya se encuentra en el remito.}
     \caseUseRow{El escenario vuelve al punto 2.}
