--- a/Informe Final/Capitulos/Capitulo4/CasosUso/GestionVentas/generarRemitoDesdeVenta.tex
+++ b/Informe Final/Capitulos/Capitulo4/CasosUso/GestionVentas/generarRemitoDesdeVenta.tex
@@ -22,15 +22,15 @@
     \addCaseUseStep{ZMGestión pasa el estado de el remito a `Creado'.}
 }
 \renewcommand{\alternativeCaseUse}{ %Flujos alternativos
-	\newAlternative{A1: No se agregó ninguna línea de remito.}{5} %Flujo alternativo A1.
-	\caseUseRow{La secuencia A1 comienza luego del punto 5 del escenario principal.} %¡Indicar número paso!
+	\newAlternative{A1: No se agregó ninguna línea de remito.}{3} %Flujo alternativo A1.
+	\caseUseRow{La secuencia A1 comienza luego del punto 3 del escenario principal.} %¡Indicar número paso!
     \alternativeRow{ZMGestion muestra un mensaje de error indicando que debe ingresar al menos una linea de remito.}
-    \caseUseRow{El escenario vuelve al punto 5.}
+    \caseUseRow{El escenario vuelve al punto 2.}
     \caseUseRow{}
-    \newAlternative{A2: Al menos una línea de venta seleccionada no se encuentra en estado `Pagada'.}{3} %Flujo alternativo A1.
+    \newAlternative{A2: El total pagado no es suficiente para realizar el remito.}{3} %Flujo alternativo A1.
 	\caseUseRow{La secuencia A2 comienza luego del punto 3 del escenario principal.} %¡Indicar número paso!
-    \alternativeRow{ZMGestion muestra un mensaje de error indicando que no se puede crear una línea de remito a partir de la línea seleccionada.}
-    \caseUseRow{El escenario vuelve al punto 5.}
+    \alternativeRow{ZMGestion muestra un mensaje de error indicando que no se puede generar un remito a partir de la venta seleccionada.}
+    \caseUseRow{El escenario vuelve al punto 2.}
     \caseUseRow{}
 }
 
